--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="cover black" data-color="black"></div>
         <div class="container">
             <h1 class="logo cursive">
-                Let's Make Something Awesome
+                Let's Make Something Awwhhhhssome
             </h1>
 
             <div class="content">
